# scryfall-rs

./: Cargo.toml  README.md
.github/workflows/: clippy_check.yml  nightly-lints.yml
src/: lib.rs  main.rs  scryfall_client.rs  structs.rs
src/card/: legality.rs  mod.rs
src/client/: mod.rs  network_types.rs  scryfall_client.rs
tests/: card_named.rs  card_random_fuzz.rs  initialize_card.rs
