[package]
name = "scryfall-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
